kiszedtem a lightbox sort, a footer-ben a hasábok border-jét, a footer fix magasságát és a #wrap div --os padding-jét

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,13 +89,13 @@ body h2,p,b{
     height: auto !important;
     height: 100%;
     /* Negative indent footer by it's height */
-    margin: 0 auto -240px;
+    margin: 0 auto ;
 }
 
 /* Set the fixed height of the footer here */
 #push,
 #footer {
-    height: 400px;
+    
 }
 
 #footer {
@@ -115,14 +115,8 @@ body h2,p,b{
 	
 	font-weight: bold;
 }
-#footer .col-md-4{
-	border-right: 1px dotted gray;
-	height: 210px;
-	margin-top: 5px;
 }
-#footer .col-md-4:last-child{
-	border:0px;
-}
+
 
 /* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 767px) {
@@ -141,13 +135,21 @@ body h2,p,b{
 	.navbar a{
 		font-size: 10px;
 	}
+	#footer {
+		height:100px !important;
+	}
 }
 @media (min-width: @screen-xs-min) { 
 	.navbar a{
 		font-size: 10px;
 	}
+	#footer {
+		height:100px !important;
+	}
 }
+@media(min-width: @screen-xs-min){
 
+}
 
 
 
@@ -204,9 +206,3 @@ body h2,p,b{
 .modal-title { font: 400 normal 1.625em "Roboto",Arial,Verdana,sans-serif; }
 .modal-footer { font: 400 normal 1.125em "Roboto",Arial,Verdana,sans-serif; } 
 
-/*!
- * Lightbox for Bootstrap 3 by @ashleydw
- * https://github.com/ashleydw/lightbox
- *
- * License: https://github.com/ashleydw/lightbox/blob/master/LICENSE
- */.ekko-lightbox-container{position:relative}.ekko-lightbox-nav-overlay{position:absolute;top:0;left:0;z-index:100;width:100%;height:100%}.ekko-lightbox-nav-overlay a{z-index:100;display:block;width:49%;height:100%;padding-top:45%;font-size:30px;color:#fff;text-shadow:2px 2px 4px #000;opacity:0;filter:dropshadow(color=#000000,offx=2,offy=2);-webkit-transition:opacity .5s;-moz-transition:opacity .5s;-o-transition:opacity .5s;transition:opacity .5s}.ekko-lightbox-nav-overlay a:empty{width:49%}.ekko-lightbox a:hover{text-decoration:none;opacity:1}.ekko-lightbox .glyphicon-chevron-left{left:0;float:left;padding-left:15px;text-align:left}.ekko-lightbox .glyphicon-chevron-right{right:0;float:right;padding-right:15px;text-align:right}.ekko-lightbox .modal-footer{text-align:left}
